test/test-files/analyzer/variables/error-dyn-pointer/exception.out
Semantic error in : ./test-files/analyzer/variables/error-dyn-pointer/source.spice:3:5:
Dyn pointers not allowed: Just use the dyn type without '*' instead

dyn** dynPointer = &&s;
^^^^^